@@ -18,11 +18,27 @@ var (
 			cli.StringSliceFlag{Name: "env, e", Value: &EnvFlag, Usage: "Environment variables", EnvVar: ""},
 			cli.StringSliceFlag{Name: "file, f", Value: &FilesFlag, Usage: "Files to upload", EnvVar: ""},
 		},
-		Description: `Run command in current app context, your application
-   environment will be loaded and you can execute any task.
-     Example
-       'scalingo --app my-app run bundle exec rails console'
-       'scalingo --app synfony-app run php app/console cache:clear --env=prod'`,
+		Description: `Run command in current app context, a one-off container will be
+   start with your application environment loaded.
+
+   Example
+     scalingo --app rails-app run bundle exec rails console
+     scalingo --app synfony-app run php app/console cache:clear --env=prod
+
+   If you need to inject additional environment variables, you can use the flag
+   '-e'. You can use it multiple time to define multiple variables. These variables
+   will override those defined in your application environment.
+
+   Example
+     scalingo run -e VARIABLE=VALUE -e VARIABLE2=OTHER_VALUE rails console
+
+   Furthermore, you may want to upload a file, like a database dump or anything
+   useful to you. The option '-f' has been built for this purpose, you can even
+   upload multiple file if you wish. You will be able to find these file in the
+   '/tmp/uploads' directory of the one-off container
+
+   Example
+     scalingo run -f $HOME/mysqldump.sql bash`,
 		Action: func(c *cli.Context) {
 			currentApp := appdetect.CurrentApp(c)
 			if len(c.Args()) == 0 {
